---
source: tests/eval.rs
description: "class Foo {\n    method() {\n        print \"Foo method\";\n    }\n}\n\nclass Bar < Foo {\n    method() {\n        super.method();\n        print \"Bar method\";\n    }\n}\n\nBar().method(); //> Foo method\\nBar method\n\n"
expression: combined
---
:: Output ::
Foo method
Bar method
